fixed cropperjs custom CSS styles to override default style

--- a/public/assets/css/create-or-update-trick.css
+++ b/public/assets/css/create-or-update-trick.css
@@ -303,7 +303,7 @@
   cursor: not-allowed;
 }
 
-
+.st-cropper-preview{width:100%}.cropper-modal{opacity:0}.cropper-face{background-color:rgba(30,135,240,0.5)}.cropper-face,.cropper-line,.cropper-point{opacity:1}.cropper-line{background-color:#ecdd13}
 
 
 /*# sourceMappingURL=create-or-update-trick.css.map*/
