--- a/public/assets/src/scss/common.scss
+++ b/public/assets/src/scss/common.scss
@@ -754,25 +754,6 @@ footer.st-footer {
         transition: opacity 0.75s ease-in-out;
     }
 }
-// Avatar Cropper image preview
-.st-cropper-preview {
-    width: 100%;
-}
-// Cropper js override
-.cropper-modal {
-    //background-color: rgba(51, 51, 51, 0.5);
-    opacity: 0;
-}
-.cropper-face {
-    background-color: rgba(30, 135, 240, 0.5);
-}
-.cropper-face, .cropper-line, .cropper-point {
-    opacity: 1;
-}
-.cropper-line {
-    background-color: rgba(236, 221, 19, 1);
-}
-
 /************************** Create/Update trick **************************/
 // image crop box label
 .st-image-to-crop-label {
